# nubra-mcp-server

./: .env.example  .gitignore  .mcp.json  AGENTS.md  NUBRA_MCP_WEBINAR_PROMPT_SHEET.md  README.md  backtest_ui.py  bootstrap.ps1  check_health.ps1  config.py  mcp-client-config.example.json  nubra_client.py  pyproject.toml  requirements.txt  run_http.ps1  run_stdio.ps1  server.py  strategy_backtest_engine.py
package/: README.md  config.py  nubra_client.py  nubra_mcp_cli.py  pyproject.toml  server.py
package/tools/: __init__.py  account.py  analytics.py  backtest.py  journal.py  options.py  orders.py  portfolio.py  quotes.py  screener.py  talib_tools.py
tests/: test_nubra_client.py
tools/: analytics.py  auth.py  backtest.py  orders.py  portfolio.py  quotes.py  risk.py  screener.py  ui.py
